# exchange-price-slippage-arbitrage

./: .env.example  .flake8  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  coinmate_signature.py  deploy.sh  docker-compose.grafana.yml  docker-compose.jupyter.yml  docker-compose.yml  jupyter-requirements.txt  main.py  pyproject.toml  test_runner.py  test_telegram.py
analytics/: requirements.txt
analytics/notebooks/: arbitrage_analysis.ipynb
config/: settings.py
database/schemas/: init.sql
deployment/docker/: docker-compose.grafana.yml  docker-compose.jupyter.yml  docker-compose.yml
deployment/scripts/: deploy.sh
docs/: CLAUDE.md  DEPLOYMENT.md
grafana/dashboards/: bitcoin-arbitrage.json
grafana/datasources/: timescaledb.yml
monitoring/: logrotate.conf
src/: coinmate_api.py  exchange_monitor.py  utils.py
src/apis/: __init__.py  base_exchange.py  coinmate_api.py  kraken_api.py
src/apis/coinmate/: __init__.py  api.py
src/apis/kraken/: __init__.py  api.py
src/core/: arbitrage_detector.py  data_models.py  exchange_monitor.py
src/services/: currency_converter.py  database_service.py  telegram_service.py
src/utils/: logging.py
tests/: conftest.py  test_arbitrage_detector.py  test_coinmate_api.py  test_currency_converter.py  test_kraken_api.py  test_runner.py
tests/integration/: test_coinmate_integration.py  test_database_integration.py  test_telegram.py
tests/unit/: test_arbitrage_detector.py  test_coinmate_api.py  test_currency_converter.py  test_kraken_api.py  test_telegram_service.py
tests/unit/apis/: test_base_exchange.py  test_coinmate_api.py  test_kraken_api.py
tests/unit/services/: test_currency_converter.py  test_database_service.py  test_telegram_service.py
